tests/ui/solver-attribute/unknown/expected
error: unknown solver `foo`\
test.rs:\
|\
| #[kani::solver(foo)]\
| ^^^^^^^^^^^^^^^^^^^^
error: aborting due to previous error
